New example of layout

--- a/src/stylesheets/Lungo.layout.nav.less
+++ b/src/stylesheets/Lungo.layout.nav.less
@@ -119,7 +119,7 @@ footer nav a {
         & .bubble { top: -34px; }
 
         & abbr {
-            display: block;
+            display: block !important;
             position: absolute;
             top: 30px;
             width: inherit;
