--- a/src/stylesheets/Lungo.theme.default.less
+++ b/src/stylesheets/Lungo.theme.default.less
@@ -14,9 +14,9 @@
 @theme: #2A95D3;
 @theme-light:  #39ABE1;
 @theme-dark: #1984C2;
-@theme: #2C8BCA;
-@theme-light:  #2C8BCA;
-@theme-dark: #154F93;
+// @theme: #2C8BCA;
+// @theme-light:  #2C8BCA;
+// @theme-dark: #154F93;
 @footer: #292F34;
     @footer-dark: #23282C;
 @color: #484a49;
