Android Navigator 4.0 compatible

--- a/src/stylesheets/Lungo.layout.article.less
+++ b/src/stylesheets/Lungo.layout.article.less
@@ -11,11 +11,12 @@
 @import "constants.less";
 
 article {
-    // @todo: section position absolute or FIXED
-    // position: absolute;
-    position: fixed;
+    position: absolute;
     width: inherit;
     height: auto;
+
+    // width: 100%;
+    // eight: 100%;
     top: 0;
     bottom: 0;
 
