--- a/src/stylesheets/Lungo.layout.less
+++ b/src/stylesheets/Lungo.layout.less
@@ -65,7 +65,7 @@ section {
 }
 
 header, footer  {
-    position: fixed;
+    position: absolute;
     left: 0;
     width: 100%;
     display: block;
