--- a/src/stylesheets/css/Lungo.layout.css
+++ b/src/stylesheets/css/Lungo.layout.css
@@ -123,7 +123,7 @@ section[data-transition="slide"].hide {
 }
 header,
 footer {
-  position: fixed;
+  position: absolute;
   left: 0;
   width: 100%;
   display: block;
