Refolder kitchen-sink

--- a/src/stylesheets/Lungo.layout.aside.less
+++ b/src/stylesheets/Lungo.layout.aside.less
@@ -79,6 +79,8 @@ aside {
     }
 }
 
+/*
+@TODO: Tablets & TV on final release
 @media handheld, only screen and (min-width: 768px) {
     .autohide[data-target="aside"] {  display: none !important; }
 
@@ -92,3 +94,4 @@ aside {
         &.small{ left: @aside-width-small; }
     }
 }
+*/
