--- a/src/stylesheets/Lungo.widgets.loading.less
+++ b/src/stylesheets/Lungo.widgets.loading.less
@@ -79,7 +79,7 @@
     }
 }
 
-section.current .loading, .notification .loading {
+section.show .loading, section.current .loading, .notification .loading {
     -webkit-animation:  rotatingLoader .6s  infinite linear;
     -moz-animation:  rotatingLoader .6s  infinite linear;
 }
