Now data-target attribute is data-router
… in API JavaScript Lungo.Router...

--- a/src/stylesheets/Lungo.layout.aside.less
+++ b/src/stylesheets/Lungo.layout.aside.less
@@ -21,7 +21,6 @@ section.aside {
     }
 }
 
-
 aside {
     position: absolute;
     height: auto;
@@ -82,7 +81,7 @@ aside {
 /*
 @TODO: Tablets & TV on final release
 @media handheld, only screen and (min-width: 768px) {
-    .autohide[data-target="aside"] {  display: none !important; }
+    .autohide[data-router="aside"] {  display: none !important; }
 
     section.aside {
         width: auto !important;
