--- a/src/stylesheets/css/Lungo.layout.aside.css
+++ b/src/stylesheets/css/Lungo.layout.aside.css
@@ -107,7 +107,7 @@ aside.small nav .bubble {
 /*
 @TODO: Tablets & TV on final release
 @media handheld, only screen and (min-width: 768px) {
-    .autohide[data-target="aside"] {  display: none !important; }
+    .autohide[data-router="aside"] {  display: none !important; }
 
     section.aside {
         width: auto !important;
