Resize layout if is ios + navigator (no fullscreen)

--- a/src/stylesheets/css/Lungo.layout.aside.css
+++ b/src/stylesheets/css/Lungo.layout.aside.css
@@ -58,7 +58,7 @@ section.aside.right.small {
 }
 aside {
   position: absolute;
-  height: auto;
+  height: inherit;
   top: 0;
   bottom: 0;
   display: none;
