--- a/src/stylesheets/Lungo.layout.aside.less
+++ b/src/stylesheets/Lungo.layout.aside.less
@@ -23,7 +23,7 @@ section.aside {
 
 aside {
     position: absolute;
-    height: auto;
+    height: inherit;
     top: 0;
     bottom: 0;
     display: none;
