<header> with .title + .subtitle style

--- a/src/stylesheets/Lungo.layout.less
+++ b/src/stylesheets/Lungo.layout.less
@@ -86,6 +86,16 @@ header {
         font-size: 1.2em;
         font-weight: bold;
 
+        &.with-subtitle {
+            line-height: 34px;
+            & .subtitle {
+                position: relative;
+                top: -4px;
+                display: block;
+                font-size: 0.7em;
+                line-height: 0.7em;}
+        }
+
         & img { height: 24px; }
 
         &.centered {
