--- a/src/stylesheets/Lungo.layout.list.less
+++ b/src/stylesheets/Lungo.layout.list.less
@@ -62,6 +62,17 @@
 
             & .bubble { display: none; }
         }
+
+        strong {
+            font-size: 1.15em; }
+
+        small {
+            display: block;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            font-size: 0.8em; }
+
     }
 
     & .bubble {
