--- a/src/stylesheets/Lungo.theme.default.less
+++ b/src/stylesheets/Lungo.theme.default.less
@@ -43,6 +43,11 @@ section > header {
         color: @white;
         text-shadow: 0 1px 0 rgba(0,0,0,0.2);
     }
+
+    & .subtitle {
+        color: @white;
+        opacity: 0.7;
+    }
 }
 section > footer {
     .linear-gradient(top, ~','@footer 0%, ~','@footer-dark 60%);
